// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FAVSCREEN_NAME_OPEN action 1`] = `
Object {
  "type": "FAVSCREEN_NAME_OPEN",
}
`;

exports[`creates a FAVSCREEN_SCROLL action 1`] = `
Object {
  "type": "FAVSCREEN_SCROLL",
}
`;

exports[`creates a FAVSCREEN_VIEW action 1`] = `
Object {
  "type": "LISTSCREEN_VIEW",
}
`;

exports[`creates a LISTSCREEN_NAME_OPEN action 1`] = `
Object {
  "type": "LISTSCREEN_NAME_OPEN",
}
`;

exports[`creates a LISTSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": false,
      "name": "artur",
    },
  },
  "type": "LISTSCREEN_NAME_UNFAVORITE",
}
`;

exports[`creates a LISTSCREEN_RATEALERT_RATE action 1`] = `
Object {
  "type": "LISTSCREEN_RATEALERT_RATE",
}
`;

exports[`creates a LISTSCREEN_RATEALERT_RESETVISITS action 1`] = `
Object {
  "type": "LISTSCREEN_RATEALERT_RESETVISITS",
}
`;

exports[`creates a LISTSCREEN_RATEALERT_SHOW action 1`] = `
Object {
  "type": "LISTSCREEN_RATEALERT_SHOW",
}
`;

exports[`creates a LISTSCREEN_RATEALERT_UPDATEVISITS action 1`] = `
Object {
  "type": "LISTSCREEN_RATEALERT_UPDATEVISITS",
}
`;

exports[`creates a LISTSCREEN_SCROLL action 1`] = `
Object {
  "type": "LISTSCREEN_SCROLL",
}
`;

exports[`creates a LISTSCREEN_VIEW action 1`] = `
Object {
  "type": "FAVSCREEN_VIEW",
}
`;

exports[`creates an action to load names 1`] = `
Object {
  "type": "FETCH_NAMES_REQUEST",
}
`;
